--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,3 +15,14 @@ spring:
       connection-test-query: SELECT 1
   redis:
     host: 47.105.221.99
+  thymeleaf:
+    prefix: classpath:/templates/
+qiniu:
+  access-key: JfvKpmCZqfM2nzKXP49Bhe3LUIo1nX_9UneS3EL0
+  secret-key: JFBrCeLMSeMvkzQUQ-Jr5RbZoX7PzSEiFvyMxuOG
+  bucket: xiaoyouhezu_dev
+  bucket-url: qiniutest001.fensibox.com
+goeasy:
+  cdn-host: cdn.goeasy.io
+  rest-host: rest-hangzhou.goeasy.io
+  app-key: BC-0a302f5f67764730b09e4be87bf06f0f
