--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -13,3 +13,12 @@ spring:
       max-lifetime: 1800000
       connection-timeout: 30000
       connection-test-query: SELECT 1
+qiniu:
+  access-key: tM193uNBWVubyf1od06tTI50euAd31tOOg3GXsA4
+  secret-key: U7pSQxlKAq8sMDXFC2wFH53mdvPR9mG9gzgYRVjq
+  bucket: test001
+  bucket-url: test001.pnlyy.com
+goeasy:
+  cdn-host: cdn.goeasy.io
+  rest-host: rest-hangzhou.goeasy.io
+  app-key: BC-0a302f5f67764730b09e4be87bf06f0f
